RESOLVED FIXED288372
Slack is relying on garbage collection to stop camera capture
https://bugs.webkit.org/show_bug.cgi?id=288372
Summary Slack is relying on garbage collection to stop camera capture
youenn fablet
Reported 2025-02-24 08:28:51 PST
Slack is relying on garbage collection to stop camera capture
Attachments
youenn fablet
Comment 1 2025-02-24 08:29:08 PST
EWS
Comment 2 2025-02-26 06:06:34 PST
Committed 291110@main (6f897d326625): <https://commits.webkit.org/291110@main> Reviewed commits have been landed. Closing PR #41202 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.