Slack is relying on garbage collection to stop camera capture rdar://110627788 https://bugs.webkit.org/show_bug.cgi?id=288372

Reviewed by Jean-Yves Avenard.

We allow GC of MediaStream and MediaStreamTrack objects when they do not have event listeners.
We also allow GC of non RTCPeerConnection MediaStream since they cannot fire events.

Drive-by fix: Remove an unneeded map in LibWebRTCMediaEndpoint.

Covered by added test.

* LayoutTests/fast/mediastream/mediastream-gc-expected.txt: Added.
* LayoutTests/fast/mediastream/mediastream-gc.html: Added.
* Source/WebCore/Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::create):
(WebCore::MediaStream::MediaStream):
(WebCore::MediaStream::didAddTrack):
(WebCore::MediaStream::didRemoveTrack):
(WebCore::MediaStream::addTrackFromPlatform):
(WebCore::MediaStream::inactivate):
(WebCore::MediaStream::virtualHasPendingActivity const):
(WebCore::MediaStream::stop): Deleted.
* Source/WebCore/Modules/mediastream/MediaStream.h:
* Source/WebCore/Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::~MediaStreamTrack):
(WebCore::MediaStreamTrack::virtualHasPendingActivity const):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream):
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::mediaStreamFromRTCStreamId):
(WebCore::LibWebRTCMediaEndpoint::stop):
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
* Source/WebCore/platform/audio/PlatformMediaSessionManager.h:
(WebCore::PlatformMediaSessionManager::audioCaptureSourceCount const):
(WebCore::PlatformMediaSessionManager::hasAudioCaptureSource const): Deleted.
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::removeMediaStreamTrack):
(WebCore::Internals::audioCaptureSourceCount const):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/291110@main